--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <img class="wa-mark" src="https://static.whatsapp.net/rsrc.php/yZ/r/JvsnINJ2CZv.svg" alt="WhatsApp">
     <img class="logo" src="logo.png" alt="MyStake Logo">
     <!-- Fallback sin JS => anuncio 1 -->
-    <a class="boton" id="wa-btn" href="https://wa.link/m3z0oc" target="_blank" rel="noopener">Ir al chat</a>
+    <a class="boton" id="wa-btn" href="https://wa.link/k6uqo7" target="_blank" rel="noopener">Ir al chat</a>
   </header>
 
   <div class="cta-panel">
@@ -103,10 +103,10 @@
 
     // 4 wa.link (uno por anuncio) — reemplazá los códigos si querés usar otros
     const LINKS = {
-      '1': 'https://wa.link/m3z0oc',
-      '2': 'https://wa.link/tvzw90',
-      '3': 'https://wa.link/ps4x8f',
-      '4': 'https://wa.link/l9cjh4'
+      '1': 'https://wa.link/k6uqo7',
+      '2': 'https://wa.link/dmynw7',
+      '3': 'https://wa.link/2e7pqa',
+      '4': 'https://wa.link/r0nbeh'
     };
 
     // Setear botón y enviar Lead con src
