--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
     <img class="wa-mark" src="https://static.whatsapp.net/rsrc.php/yZ/r/JvsnINJ2CZv.svg" alt="WhatsApp">
     <img class="logo" src="logo.png" alt="MyStake Logo">
     <!-- Fallback sin JS => anuncio 1 -->
-    <a class="boton" id="wa-btn" href="https://wa.link/m3z0oc" target="_blank" rel="noopener">Ir al chat</a>
+    <a class="boton" id="wa-btn" href="https://wa.link/k6uqo7" target="_blank" rel="noopener">Ir al chat</a>
       </div>
   </header>
-  <a class="fab" id="wa-fab" href="https://wa.link/m3z0oc" target="_blank" rel="noopener" aria-label="WhatsApp"><img src="https://static.whatsapp.net/rsrc.php/yZ/r/JvsnINJ2CZv.svg" alt=""></a>
+  <a class="fab" id="wa-fab" href="https://wa.link/k6uqo7" target="_blank" rel="noopener" aria-label="WhatsApp"><img src="https://static.whatsapp.net/rsrc.php/yZ/r/JvsnINJ2CZv.svg" alt=""></a>
 
   <div class="wrap"><div class="cta-panel">
     <div class="cta-text">Envía el siguiente mensaje por WhatsApp para crear tu usuario:</div>
-    <p class="rtp"><strong>“Hola, quiero crear mi usuario. Mi nombre es: ”</strong></p>
+    <p class="rtp"><strong>“Hola, vengo del anuncio ”</strong></p>
     <div class="eso">
       <p>¿Aún no tenés WhatsApp?</p>
       <a href="https://www.whatsapp.com/download" target="_blank" rel="noopener">Descargar</a>
@@ -133,9 +133,9 @@
   <!-- TRUST badges -->
   <div class="wrap">
   <section class="trust" aria-label="Razones para confiar">
-    <div class="item"><span class="emo">✅</span><div><b>Pagos en el acto</b><span>Procesos claros y confirmación por chat.</span></div></div>
+    <div class="item"><span class="emo">✅</span><div><b>Pagos en el acto</b><span>Retiros y pagos de forma rápida.</span></div></div>
     <div class="item"><span class="emo">🕑</span><div><b>Atención 24/7</b><span>Siempre disponible por WhatsApp.</span></div></div>
-    <div class="item"><span class="emo">🛡️</span><div><b>Datos protegidos</b><span>No pedimos claves ni tokens.</span></div></div>
+    <div class="item"><span class="emo">🛡️</span><div><b>Datos protegidos</b><span>No pedimos datos personales.</span></div></div>
     <div class="item"><span class="emo">📄</span><div><b>Políticas visibles</b><span>Privacidad y condiciones claras.</span></div></div>
   </section>
   </div>
@@ -145,11 +145,11 @@
   <section class="faq">
     <details>
       <summary>¿Qué datos tengo que enviar?</summary>
-      <p>Solo tu nombre y cómo querés que te contactemos. Nunca pedimos datos bancarios ni claves.</p>
+      <p>Solo tu nombre y cómo querés que te llamemos. No pedimos más datos.</p>
     </details>
     <details>
       <summary>¿Cuánto tardan en responder?</summary>
-      <p>Normalmente menos de 5 minutos. Si tardamos, quedás en prioridad.</p>
+      <p>Normalmente menos de 3 minutos.</p>
     </details>
     <details>
       <summary>¿Cómo protegen mis datos?</summary>
@@ -162,7 +162,7 @@
   <div class="wrap">
     <h2 class="tzt">WhatsApp</h2>
     <p>Atención por WhatsApp</p>
-    <p style="opacity:.9;margin-top:10px">Contacto alternativo: <a href="mailto:soporte@tusitio.com" style="color:#9ee2ff">soporte@tusitio.com</a></p>
+    <p style="opacity:.9;margin-top:10px">Contacto alternativo: <a href="mailto:soporte@tusitio.com" style="color:#9ee2ff"></a></p>
     <p id="privacidad" style="opacity:.7;font-size:12px;margin:12px auto 0;max-width:800px">Aviso: Este sitio no almacena datos de tarjeta. Nunca te pediremos claves, códigos de verificación ni token de tu banco. Consultá nuestra <a href="#privacidad" style="color:#9ee2ff">Política de Privacidad</a> y <a href="#terminos" style="color:#9ee2ff">Términos</a>.</p>
     </div>
 </footer>
@@ -183,10 +183,10 @@
 
     // 4 wa.link (uno por anuncio) — reemplazá los códigos si querés usar otros
     const LINKS = {
-      '1': 'https://wa.link/m3z0oc',
-      '2': 'https://wa.link/tvzw90',
-      '3': 'https://wa.link/ps4x8f',
-      '4': 'https://wa.link/l9cjh4'
+      '1': 'https://wa.link/k6uqo7',
+      '2': 'https://wa.link/dmynw7',
+      '3': 'https://wa.link/2e7pqa',
+      '4': 'https://wa.link/r0nbeh'
     };
 
     // Setear botón y enviar Lead con src
